--- a/_posts/2019-03-20-purim.markdown
+++ b/_posts/2019-03-20-purim.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "AUJS & AEPi Bake '19"
 date: 2019-03-20 00:00:00 +1100
 image: https://i.imgur.com/EBB1uWq.jpg
