--- a/_posts/2016-08-24-rush.markdown
+++ b/_posts/2016-08-24-rush.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title:  "First Rush Underway"
 date:   2016-08-24 00:00:00 +1100
 image: https://i.imgur.com/wpdSeM0.jpg
