--- a/_posts/2016-10-07-alphas.markdown
+++ b/_posts/2016-10-07-alphas.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title:  "Hello Alpha Class!"
 date:   2016-10-11 00:00:00 +1100
 image: https://i.imgur.com/Ufn6adl.jpg
