--- a/_posts/2016-10-11-bake.markdown
+++ b/_posts/2016-10-11-bake.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title:  "Bros Who Bake"
 date:   2016-10-11 00:00:00 +1100
 image: https://i.imgur.com/WtXkMDc.jpg
