--- a/_posts/2017-02-22-house.markdown
+++ b/_posts/2017-02-22-house.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title:  "AEPi is In The Building"
 date:   2017-02-22 00:00:00 +1100
 image: https://i.imgur.com/BNu5jzI.jpg
