--- a/_posts/2017-04-10-betas.markdown
+++ b/_posts/2017-04-10-betas.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title:  "Welcome Beta Class!"
 date:   2017-04-10 00:00:00 +1100
 image: https://i.imgur.com/QpB2qmv.jpg
