--- a/_posts/2018-05-10-detlas.markdown
+++ b/_posts/2018-05-10-detlas.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "Welcome Delta Class!"
 date: 2018-05-10 00:00:00 +1100
 image: https://i.imgur.com/efQFS21.jpg
