--- a/_posts/2018-07-04-roadtrip.markdown
+++ b/_posts/2018-07-04-roadtrip.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "The Great OZA Roadtrip"
 date: 2018-07-04 00:00:00 +1100
 image: https://i.imgur.com/JluzGXS.jpg
