--- a/_posts/2018-10-04-whiskey.markdown
+++ b/_posts/2018-10-04-whiskey.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "Whiskey Business 2018"
 date: 2018-10-04 00:00:00 +1100
 image: https://i.imgur.com/LgLco3c.jpg
