--- a/_posts/2018-10-20-epsilons.markdown
+++ b/_posts/2018-10-20-epsilons.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "Welcome Epsilons!"
 date: 2018-10-20 00:00:00 +1100
 image: https://i.imgur.com/Eb7hvJq.jpg
