--- a/_posts/2018-11-15-conclave.markdown
+++ b/_posts/2018-11-15-conclave.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "Oxford Conclave 2018"
 date: 2018-11-15 00:00:00 +1100
 image: https://i.imgur.com/SE8POCp.jpg
