--- a/_posts/2019-03-04-jim.markdown
+++ b/_posts/2019-03-04-jim.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "From Sydney With Brotherly Love"
 date: 2019-03-04 00:00:00 +1100
 image: https://i.imgur.com/5yHGdzw.jpg
