--- a/_posts/2019-03-25-gdc.markdown
+++ b/_posts/2019-03-25-gdc.markdown
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: "AEPi Brothers Attend GDC in San Francisco"
 date: 2019-03-25 00:00:00 +1100
 image: https://i.imgur.com/mNl4RjY.jpg
